GTK: Fix background tab color in refresh

Because of the code in [1], themes are now expected to provide the
background tab color themselves.  This change restores the old
computation of the background colors for the GTK theme.

[1] https://cs.chromium.org/chromium/src/chrome/browser/themes/theme_service.cc?rcl=2bd1e8edee9e15c20f0d19718ee7b40a137dbb67 [formerly 306871de3e87f2d1844952ee730112e1fdabbae4]&l=473

BUG=866953

Change-Id: I16c4577a78f25e95d1a602ed7f795d2b032f2e0a
Reviewed-on: https://chromium-review.googlesource.com/1162671
Reviewed-by: Lei Zhang <thestig@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580741}
Former-commit-id: d090b4033e4b8ca7a2641e254ab6727a8a6749cf