chrome/browser/ui/libgtkui/gtk_util.cc
@@ -60,11 +60,13 @@ void CommonInitFromCommandLine(const base::CommandLine& command_line,
 
 namespace libgtkui {
 
-// TODO(erg): ThemeService has a whole interface just for reading default
-// constants. Figure out what to do with that more long term; for now, just
-// copy the constants themselves here.
+// TODO(thomasanderson): ThemeService has a whole interface just for reading
+// default constants. Figure out what to do with that more long term; for now,
+// just copy the constants themselves here.
 const color_utils::HSL kDefaultTintFrameIncognito = {-1, 0.2f, 0.35f};
 const color_utils::HSL kDefaultTintFrameIncognitoInactive = {-1, 0.3f, 0.6f};
+const color_utils::HSL kDefaultTintBackgroundTab = {-1, -1, 0.42975};
+const color_utils::HSL kDefaultTintBackgroundTabIncognito = {-1, -1, 0.34375};
 
 // Theme colors returned by GetSystemColor().
 const SkColor kInvalidColorIdColor = SkColorSetRGB(255, 0, 128);
